--- a/rs_hw2_cherkashina_meshkov.ipynb
+++ b/rs_hw2_cherkashina_meshkov.ipynb
@@ -27,6 +27,7 @@
     "- Python 3.12.7\n",
     "- Pandas 2.2.3\n",
     "- Matplotlib 3.9.2\n",
+    "- nltk 3.9.1\n",
     "- spacy/flair/ stanza/ nltk - *после того как определимся с пакетом*\n",
     "- Scikit-learn  1.5.1\n"
    ]
@@ -101,7 +102,7 @@
    "id": "3d0e3e8c",
    "metadata": {},
    "source": [
-    "## Input block"
+    "## Import librares"
    ]
   },
   {
@@ -115,6 +116,8 @@
     "#import kagglehub\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
+    "import nltk\n",
+    "from nltk.tokenize import word_tokenize\n",
     "plt.style.use('ggplot')"
    ]
   },
@@ -125,10 +128,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# download latest version dataset\n",
-    "#path = kagglehub.dataset_download(\"kazanova/sentiment140\")\n",
+    "# download latest version dataset via API, for download uncomment\n",
     "\n",
-    "#a = print(\"Path to dataset files:\", path)"
+    "#path = kagglehub.dataset_download(\"kazanova/sentiment140\")\n",
+    "#print(\"Path to dataset files:\", path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baedc07d",
+   "metadata": {},
+   "source": [
+    "## Task №1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ae71822",
+   "metadata": {},
+   "source": [
+    "### 1.1 Load \"text\" and \"target\" columns to pandas. "
    ]
   },
   {
@@ -167,8 +186,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import df\n",
-    "df = pd.read_csv('training.1600000.processed.noemoticon.csv', \n",
+    "# import data\n",
+    "data = pd.read_csv('training.1600000.processed.noemoticon.csv', \n",
     "                 encoding='latin-1', \n",
     "                 names = [\"target\", \"ids\", \"date\", \"flag\", \"user\", \"text\"])"
    ]
@@ -177,6 +196,37 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "f1eceb01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1600000 entries, 0 to 1599999\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column  Non-Null Count    Dtype \n",
+      "---  ------  --------------    ----- \n",
+      " 0   target  1600000 non-null  int64 \n",
+      " 1   ids     1600000 non-null  int64 \n",
+      " 2   date    1600000 non-null  object\n",
+      " 3   flag    1600000 non-null  object\n",
+      " 4   user    1600000 non-null  object\n",
+      " 5   text    1600000 non-null  object\n",
+      "dtypes: int64(2), object(4)\n",
+      "memory usage: 73.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checking informathion about data\n",
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1a316ba3",
    "metadata": {},
    "outputs": [
     {
@@ -274,23 +324,210 @@
        "4           Karoli  @nationwideclass no, it's not behaving at all....  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# look at df\n",
-    "df.head()"
+    "# take a look at data\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cc5e530",
+   "metadata": {},
+   "source": [
+    "**Conclusion:**  data loaded correctly and contain and information same as at the description.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1a316ba3",
+   "execution_count": 6,
+   "id": "dd95ded0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Going to pic quick  join?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>urg.  i should be somewhere I really want to b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Help me!!!  Chanting NO CAKE NO CAKE!! LOL BD ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@AritheGenius Awww,  we still love you though EB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>trying to find my life again</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>0</td>\n",
+       "      <td>my house has become a bar. i want to go to bed.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Very Stormy here. I don't like. This huge burs...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>0</td>\n",
+       "      <td>i miss mcfly...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>4</td>\n",
+       "      <td>@_speranza hehe I managed to swipe a wee day o...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>4</td>\n",
+       "      <td>yay long weekend - work til 1 then done until ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     target                                               text\n",
+       "0         4                          Going to pic quick  join?\n",
+       "1         0  urg.  i should be somewhere I really want to b...\n",
+       "2         4  Help me!!!  Chanting NO CAKE NO CAKE!! LOL BD ...\n",
+       "3         0   @AritheGenius Awww,  we still love you though EB\n",
+       "4         4                      trying to find my life again \n",
+       "..      ...                                                ...\n",
+       "995       0   my house has become a bar. i want to go to bed. \n",
+       "996       0  Very Stormy here. I don't like. This huge burs...\n",
+       "997       0                                   i miss mcfly... \n",
+       "998       4  @_speranza hehe I managed to swipe a wee day o...\n",
+       "999       4  yay long weekend - work til 1 then done until ...\n",
+       "\n",
+       "[1000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filter the columns we'll be working with\n",
+    "data_filtered = data[[\"target\", \"text\"]]\n",
+    "# filter the random 1000 rows and making final df for work\n",
+    "df = data_filtered.sample(n=1000, random_state=42425).reset_index(drop=True)\n",
+    "# take a look at final df\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a8561eb",
+   "metadata": {},
+   "source": [
+    "**Conclusion:**  data frame for work have been made."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "916c7e70",
+   "metadata": {},
+   "source": [
+    "### 1.2 Compute average text length, and dictionary size. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8055582",
+   "metadata": {},
+   "source": [
+    "## Task №2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16035f92",
+   "metadata": {},
+   "source": [
+    "## Task №3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "204794f4",
+   "metadata": {},
+   "source": [
+    "## Task №4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12b6661a",
+   "metadata": {},
+   "source": [
+    "## Task №5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6977c9b9",
+   "metadata": {},
+   "source": [
+    "## Task №6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44a78c66",
+   "metadata": {},
+   "source": [
+    "## Task №7"
+   ]
   }
  ],
  "metadata": {
