--- a/rs_hw2_cherkashina_meshkov.ipynb
+++ b/rs_hw2_cherkashina_meshkov.ipynb
@@ -27,8 +27,7 @@
     "- Python 3.12.7\n",
     "- Pandas 2.2.3\n",
     "- Matplotlib 3.9.2\n",
-    "- nltk 3.9.1\n",
-    "- spacy/flair/ stanza/ nltk - *после того как определимся с пакетом*\n",
+    "- Spacy 3.8.3\n",
     "- Scikit-learn  1.5.1\n"
    ]
   },
@@ -116,8 +115,7 @@
     "#import kagglehub\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
-    "import nltk\n",
-    "from nltk.tokenize import word_tokenize\n",
+    "import spacy\n",
     "plt.style.use('ggplot')"
    ]
   },
@@ -479,6 +477,60 @@
    "metadata": {},
    "source": [
     "### 1.2 Compute average text length, and dictionary size. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2ceea53a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load model\n",
+    "nlp = spacy.load(\"en_core_web_sm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "734a8d13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# making anonymous function to find tokens\n",
+    "df['tokens'] = df['text'].apply(lambda x: [token.text.lower() \n",
+    "                                           for token in nlp(x) \n",
+    "                                           if token.is_alpha])\n",
+    "\n",
+    "# calculate average text length\n",
+    "total_length = df['tokens'].apply(len).sum()\n",
+    "average_length = total_length / len(df)\n",
+    "\n",
+    "# finding unique tokens\n",
+    "unique_tokens = set(token for tokens in df['tokens'] for token in tokens)\n",
+    "dictionary_size = len(unique_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7cca6efc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mConclusion:\u001b[0m\n",
+      "Average text length: 11.97 tokens\n",
+      "Dictionary size: 2914 tokens\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"\\033[1mConclusion:\\033[0m\")\n",
+    "print(f\"Average text length: {average_length:.2f} tokens\")\n",
+    "print(f\"Dictionary size: {dictionary_size} tokens\")"
    ]
   },
   {
