--- a/rs_hw2_cherkashina_meshkov.ipynb
+++ b/rs_hw2_cherkashina_meshkov.ipynb
@@ -111,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import librares\n",
+    "# import libraries\n",
     "#import kagglehub\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
