--- a/rs_hw2_cherkashina_meshkov.ipynb
+++ b/rs_hw2_cherkashina_meshkov.ipynb
@@ -106,16 +106,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "91affaeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (708424664.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    pip install flair\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# install flair\n",
+    "pip install flair"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "ffad34d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'spacy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pyplot \u001b[38;5;28;01mas\u001b[39;00m plt\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mspacy\u001b[39;00m\n\u001b[1;32m      6\u001b[0m plt\u001b[38;5;241m.\u001b[39mstyle\u001b[38;5;241m.\u001b[39muse(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mggplot\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'spacy'"
+     ]
+    }
+   ],
    "source": [
-    "# import libraries\n",
+    "#import libraries\n",
     "#import kagglehub\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "import spacy\n",
+    "from textblob import TextBlob\n",
+    "from flair.models import TextClassifier\n",
+    "from flair.data import Sentence\n",
     "plt.style.use('ggplot')"
    ]
   },
@@ -542,6 +584,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95a78a73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spacy sentiment analysis\n",
+    "# load spacy's model\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# sentiment classification function\n",
+    "def get_sentiment(tweet):\n",
+    "    # textblob for sentiment polarity\n",
+    "    blob = TextBlob(tweet)\n",
+    "    polarity = blob.sentiment.polarity  # polarity range is from -1 (negative) to 1 (positive)\n",
+    "    if polarity > 0:\n",
+    "        return \"Positive\"\n",
+    "    elif polarity < 0:\n",
+    "        return \"Negative\"\n",
+    "    else:\n",
+    "        return \"Neutral\"\n",
+    "\n",
+    "# applying sentiment function\n",
+    "df[\"sentiment\"] = df[\"text\"].apply(get_sentiment)\n",
+    "\n",
+    "# dataframe with results \n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f36d002",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# flair sentiment analysis\n",
+    "# sentiment analysis model from flair\n",
+    "classifier = TextClassifier.load(\"sentiment\")\n",
+    "\n",
+    "# sentiment classification function\n",
+    "def classify_sentiment(tweet):\n",
+    "    sentence = Sentence(tweet)\n",
+    "    classifier.predict(sentence)\n",
+    "    label = sentence.labels[0].value # sentiment labels\n",
+    "    score = sentence.labels[0].score # confidence scores\n",
+    "    return label, score\n",
+    "\n",
+    "# analysing and storing analysis results\n",
+    "df[\"f_sentiment\"], df[\"f_confidence\"] = zip(*df[\"text\"].apply(classify_sentiment))\n",
+    "\n",
+    "# dataframe with results\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "16035f92",
    "metadata": {},
@@ -584,7 +682,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -598,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
