--- a/rs_hw2_cherkashina_meshkov.ipynb
+++ b/rs_hw2_cherkashina_meshkov.ipynb
@@ -28,7 +28,10 @@
     "- Pandas 2.2.3\n",
     "- Matplotlib 3.9.2\n",
     "- Spacy 3.8.3\n",
-    "- Scikit-learn  1.5.1\n"
+    "- Scikit-learn  1.5.1\n",
+    "- Seaborn 0.13.2\n",
+    "- Flair 0.15.0\n",
+    "- TextBlob 0.18.0\n"
    ]
   },
   {
@@ -106,26 +109,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "91affaeb",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (708424664.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    pip install flair\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "# install flair\n",
-    "pip install flair"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "id": "ffad34d9",
    "metadata": {},
@@ -155,6 +138,7 @@
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "import spacy\n",
+    "import seaborn as sns\n",
     "from textblob import TextBlob\n",
     "from flair.models import TextClassifier\n",
     "from flair.data import Sentence\n",
@@ -523,8 +507,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2ceea53a",
+   "execution_count": null,
+   "id": "302a77a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,8 +575,6 @@
    "outputs": [],
    "source": [
     "# spacy sentiment analysis\n",
-    "# load spacy's model\n",
-    "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
     "# sentiment classification function\n",
     "def get_sentiment(tweet):\n",
@@ -637,6 +619,51 @@
     "\n",
     "# dataframe with results\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c83f18e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sentiment distribution for TextBlob results\n",
+    "# number of tweets of each sentiment\n",
+    "sentiment_counts = df[\"sentiment\"].value_counts()\n",
+    "\n",
+    "# Plot the sentiment distribution using a bar chart\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.barplot(x=sentiment_counts.index, y=sentiment_counts.values, palette=\"coolwarm\")\n",
+    "plt.title(\"Sentiment Distribution in Tweets (TextBlob)\", fontsize=16)\n",
+    "plt.xlabel(\"Sentiment\", fontsize=14)\n",
+    "plt.ylabel(\"Count\", fontsize=14)\n",
+    "plt.xticks(fontsize=12)\n",
+    "plt.yticks(fontsize=12)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01624356",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sentiment distribution for flair results\n",
+    "\n",
+    "# number of tweets of each sentiment\n",
+    "sentiment_counts_f = df[\"f_sentiment\"].value_counts()\n",
+    "\n",
+    "# Plot the sentiment distribution using a bar chart\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.barplot(x=sentiment_counts_f.index, y=sentiment_counts_f.values, palette=\"coolwarm\")\n",
+    "plt.title(\"Sentiment Distribution in Tweets (Flair)\", fontsize=16)\n",
+    "plt.xlabel(\"Sentiment\", fontsize=14)\n",
+    "plt.ylabel(\"Count\", fontsize=14)\n",
+    "plt.xticks(fontsize=12)\n",
+    "plt.yticks(fontsize=12)\n",
+    "plt.show()"
    ]
   },
   {
