--- a/rs_hw2_cherkashina_meshkov.ipynb
+++ b/rs_hw2_cherkashina_meshkov.ipynb
@@ -1032,6 +1032,33 @@
     "reccurent. This can be explained by the nature of tweets where people can be \n",
     "negative about so many different things that it becomes difficult to capture."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b8f0bf4",
+   "metadata": {},
+   "source": [
+    "## Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5344ff25",
+   "metadata": {},
+   "source": [
+    "To summarise our project's findings, text analysis is heavily reliant on tools\n",
+    "suitable for particular purposes. Although preprocessing can help increase the \n",
+    "quality of the analysis, the model and the data it was trained on also plays an\n",
+    "important role. On the example of the tweets dataset we can see that models made\n",
+    "for general text analysis are not as accurate with the unique language that is \n",
+    "being used on social media, twitter especially. Moreover, regular procedures and\n",
+    "tools used to preprocess the text might not work as well as expected due to such\n",
+    "unique vocabulary and signs used to convey meaning and sentiment on social media. \n",
+    "The main outtake is that for the purpose as specific as analysing tweets it is\n",
+    "better to use models made specifically for that, although it is worth mentioning \n",
+    "that common text analysis models do a decent enough job and can give a general\n",
+    "understanding of what is going on in the dataset. "
+   ]
   }
  ],
  "metadata": {
