--- a/rs_hw2_cherkashina_meshkov.ipynb
+++ b/rs_hw2_cherkashina_meshkov.ipynb
@@ -727,7 +727,7 @@
    "id": "03d7badf",
    "metadata": {},
    "source": [
-    "For find most friquent organizations and persons in positive\n",
+    "For find most frequent organizations and persons in positive\n",
     "tweets lets  use pandas and counter.\n"
    ]
   },
@@ -755,7 +755,7 @@
     }
    ],
    "source": [
-    "# most friquent organizations\n",
+    "# most frequent organizations\n",
     "df_entities[df_entities['entity_type'] == 'ORG'] \\\n",
     "['entity'].value_counts().head(5)"
    ]
@@ -784,7 +784,7 @@
     }
    ],
    "source": [
-    "# most friquent persons\n",
+    "# most frequent persons\n",
     "df_entities[df_entities['entity_type'] == 'PERSON'] \\\n",
     "['entity'].value_counts().head(5)"
    ]
@@ -795,8 +795,8 @@
    "metadata": {},
    "source": [
     "**Conclusion:**\n",
-    "1. The most friquent ORG is Twitter\n",
-    "2. The most friquent Person is @stephenfry  \n",
+    "1. The most frequent ORG is Twitter\n",
+    "2. The most frequent Person is @stephenfry  \n",
     "3. Some entities could be recognized with mistakes (e.g., 'urg', 'shell', etc.) because it is not specific to Twitter language."
    ]
   },
